fixes to mobile functionality and readability

--- a/styles/index.css
+++ b/styles/index.css
@@ -6,6 +6,15 @@ body {
   background-color: #dbceb0;
 }
 
+:root {
+  font-size: 16px;
+}
+@media (max-width: 577px) {
+  :root {
+    font-size: 12px;
+  }
+}
+
 .navbar {
   background-color: #7e4a35;
 }
